--- a/jfcrawler/template/phpwind_7_5_3.tmpl
+++ b/jfcrawler/template/phpwind_7_5_3.tmpl
@@ -4,6 +4,10 @@
 		<site root="http://www.icefirer.com" 
 			entrance="http://www.icefirer.com/index-htm-m-bbs.html"/>
 	</sites>
+	<sites>
+		<site root="http://www.phpwind.net" 
+			entrance="http://www.phpwind.net/index-htm-m-bbs.html"/>
+	</sites>
 	<sitemap>
 		<vertex id="catalog" classification="CATALOG">
 			<pattern type="REGEX">^index-htm-m-bbs(-cateid-[\d]+)?\.html$</pattern>
