--- a/trunk/jfcrawler/template/newsmth.tmpl
+++ b/trunk/jfcrawler/template/newsmth.tmpl
@@ -6,7 +6,7 @@
 	</sites>
 	<sitemap>
 		<vertex id="catalog" classification="CATALOG">
-			<pattern type="REGEX">^bbsfav\.php\?(select=[\d]+)?x$</pattern>
+			<pattern type="REGEX">^bbsfav\.php\?(select=[\d]+&amp;)?x$</pattern>
 			<paging type="NONE"/>
 			<child ref="catalog" xpath=""/>
 			<child ref="board" xpath=""/>
